--- a/archive.html
+++ b/archive.html
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="utf-8"><meta name="author" content="HackCba">
-        <title>Democracia con códigos | Democracia con Códigos</title>
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/rst.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/code.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/colorbox.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/theme.css" rel="stylesheet" type="text/css">
-        <!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-        <![endif]-->
-        <link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
-        <link href="css/democracy_style.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
+<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8"><meta name="description" content="1er Hackatón sobre Datos Públicos de Córdoba"><meta name="author" content="HackCba"><title>Archive | Democracia con Códigos</title><link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"><link href="assets/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"><link href="assets/css/rst.css" rel="stylesheet" type="text/css"><link href="assets/css/code.css" rel="stylesheet" type="text/css"><link href="assets/css/colorbox.css" rel="stylesheet" type="text/css"><link href="assets/css/theme.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]--><link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml"><link href="css/democracy_style.css" rel="stylesheet" type="text/css"></head><body>
 <!-- Menubar -->
 <div class="navbar navbar-fixed-top" id="navbar">
     <div class="navbar-inner">
@@ -30,18 +14,19 @@
         </a>
 
             <a class="brand" href=".">
-            Hackathon FOPEA
+            Democracia con Códigos
             </a>
             <!-- Everything you want hidden at 940px or less, place within here -->
             <div class="nav-collapse collapse">
-                <ul class="nav"><li class="active"><a href=".">Inicio</a>
+                <ul class="nav"><li><a href=".">Inicio</a>
+                </li><li><a href="faq">FAQ</a>
+                </li><li><a href="inscripcion">Inscripción</a>
+                </li><li><a href="gacetilla">Gacetilla</a>
                 </li><li><a href="como-llegar">Cómo llegar</a>
                 </li><li><a href="ideas">Ideas</a>
                 </li><li><a href="proyectos">Proyectos</a>
 
                 </li></ul><ul class="nav pull-right"><li>
-			<a target="_blank" href="http://congresodigitalfopea.com" id="sourcelink">Congreso FOPEA</a>
-		</li>
                 </ul></div>
         </div>
     </div>
@@ -53,22 +38,19 @@
     <div class="span2"></div>
     <div class="span8">
     
-    <h1>Hackathon FOPEA</h1>
-    <div class="sidebar">
-<p class="first sidebar-title">Tweets</p>
-<div class="last">
-    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23HackathonFOPEA" data-widget-id="397873584174923776">Tweets sobre "#DemocraciaConCódigos"</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div></div>
-
-<!-- <script src="https://democraciaconcodigos.hackpad.com/9lfZO4Bt6ep.js?format=html-notitle"></script>
-<noscript>
- <div>View <a href="https://democraciaconcodigos.hackpad.com/9lfZO4Bt6ep">Democracia con Códigos: : 1er Hackatón Sobre Datos Públicos de Córdoba</a> on Hackpad.</div></noscript> -->
+        <!--Body content-->
+        <div class="postbox">
+        <h1>Archive</h1>
+        <ul class="unstyled"><li><a href="2013/">2013</a>
+        </li></ul></div>
+        <!--End of body content-->
 
     </div>
     </div>
     <!--End of body content-->
 </div>
 <div class="footerbox">
-    Contents © 2013         <a href="mailto:andres@data99.com.ar">Hackathon FOPEA</a> - Powered by         <a href="http://nikola.ralsina.com.ar">Nikola</a>
+    Contents © 2013         <a href="mailto:democraciaconcodigos@gmail.com">HackCba</a> - Powered by         <a href="http://nikola.ralsina.com.ar">Nikola</a>
 </div>
 
             <script src="assets/js/jquery-1.10.2.min.js" type="text/javascript"></script><script src="assets/js/bootstrap.min.js" type="text/javascript"></script><script src="assets/js/jquery.colorbox-min.js" type="text/javascript"></script><!-- Social buttons --><div id="addthisbox" class="addthis_toolbox addthis_peekaboo_style addthis_default_style addthis_label_style addthis_32x32_style">
