--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             </a>
             <!-- Everything you want hidden at 940px or less, place within here -->
             <div class="nav-collapse collapse">
-                <ul class="nav"><li class="active"><a href=".">Inicio</a>
-                </li><li><a href="como-llegar">Cómo llegar</a>
-                </li><li><a href="ideas">Ideas</a>
-                </li><li><a href="proyectos">Proyectos</a>
-
-                </li></ul><ul class="nav pull-right"><li>
-			<a target="_blank" href="http://congresodigitalfopea.com" id="sourcelink">Congreso FOPEA</a>
+                <ul class="nav">
+                    <li class="active"><a href=".">Inicio</a></li>
+                    <li><a href="como-llegar">Cómo llegar</a></li>
+                    <li><a href="datos">Datos y Códigos</a></li>
+                </ul>
+                <ul class="nav pull-right"><li>
+                    <a target="_blank" href="http://congresodigitalfopea.com" id="sourcelink">Congreso FOPEA</a>
 		</li>
                 </ul></div>
         </div>
@@ -51,19 +51,20 @@
     <!--Body content-->
     <div class="row-fluid">
     <div class="span2"></div>
-    <div class="span8">
-    
-    <h1>Hackathon FOPEA</h1>
-    <div class="sidebar">
-<p class="first sidebar-title">Tweets</p>
-<div class="last">
-    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23HackathonFOPEA" data-widget-id="397873584174923776">Tweets sobre "#DemocraciaConCódigos"</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div></div>
+        <div class="span8">
+            <h1>Hackathon FOPEA</h1>
+            <div class="sidebar">
+                <p class="first sidebar-title">Tweets</p>
+                <div class="last">
+                    <a class="twitter-timeline" href="https://twitter.com/search?q=%23HackathonFOPEA" data-widget-id="462223806820392960">Tweets about "#HackathonFOPEA"</a>                      
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                </div>
+            </div>
 
-<!-- <script src="https://democraciaconcodigos.hackpad.com/9lfZO4Bt6ep.js?format=html-notitle"></script>
-<noscript>
- <div>View <a href="https://democraciaconcodigos.hackpad.com/9lfZO4Bt6ep">Democracia con Códigos: : 1er Hackatón Sobre Datos Públicos de Córdoba</a> on Hackpad.</div></noscript> -->
-
-    </div>
+            <p> <b> Sobre el hackathon </b> </p>
+            <p> La información sobre el hackathon se encuentra <a target="_blank" href="http://congresodigitalfopea.com/hackaton/">aquí</a>  </p>
+            <p> Puedes ver el panel de proyectos <a target="_blank" href="http://fopea2014.hackdash.org">aqui</a>  </p>
+        </div>
     </div>
     <!--End of body content-->
 </div>
