--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8"><meta name="author" content="HackCba">
-        <title>Democracia con códigos | Democracia con Códigos</title>
+        <title>Hackathon FOPEA 9 y 10 de mayo 2014</title>
         <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="assets/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
         <link href="assets/css/rst.css" rel="stylesheet" type="text/css">
@@ -30,7 +30,7 @@
         </a>
 
             <a class="brand" href=".">
-            Hackathon FOPEA
+            Hackathon FOPEA 9 y 10 de mayo 2014
             </a>
             <!-- Everything you want hidden at 940px or less, place within here -->
             <div class="nav-collapse collapse">
