--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="utf-8"><meta name="author" content="HackCba">
+        <meta charset="utf-8"><meta name="author" content="@elnomoteta">
         <title>Hackathon FOPEA 9 y 10 de mayo 2014</title>
         <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="assets/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
@@ -95,7 +95,7 @@
     <!--End of body content-->
 </div>
 <div class="footerbox">
-    Contents © 2013         <a href="mailto:andres@data99.com.ar">Hackathon FOPEA</a> - Powered by         <a href="http://nikola.ralsina.com.ar">Nikola</a>
+    Contents © 2013         <a href="mailto:andres@data99.com.ar">Hackathon FOPEA</a> - Powered by         <a href="http://getnikola.com">Nikola</a>
 </div>
 
             <script src="assets/js/jquery-1.10.2.min.js" type="text/javascript"></script><script src="assets/js/bootstrap.min.js" type="text/javascript"></script><script src="assets/js/jquery.colorbox-min.js" type="text/javascript"></script><!-- Social buttons --><div id="addthisbox" class="addthis_toolbox addthis_peekaboo_style addthis_default_style addthis_label_style addthis_32x32_style">
