agregar proyecto de saqueos

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
     <p>[CODIGO] <b>Datos del censo 2010</b></p>
     <img src='assets/img/censo2010cordoba.png' style='float:left; padding:9px; max-width: 200px;' />
     <p>Datos del censo 2010 a nivel de radio censal. Incluye el código y los datos en formato geojson</p>
+    <p>Permite la visualización por mapa de calor de cada una de las variables tomadas en el censo. Tambien puede verse en modo
+    de burbujas con tamaño segun variables.</p>
     <p>Mas info en <a target="_blank" href="http://andresvazquez.com.ar/blog/cordoba-a-nivel-de-radio-censal/">este post</a></p>
     <p>Puede verse aqui: <a target='_blank' href='http://hackathonfopea.github.io/CensoCordoba2010'>hackathonfopea.github.io/CensoCordoba2010</a></p>
     <p>Ver el código aqui: <a target='_blank' href='https://github.com/HackathonFOPEA/CensoCordoba2010'>github.com/HackathonFOPEA/CensoCordoba2010</a></p>
